--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,9 +14,9 @@
     <div th:if="${param.logout}" class="alert alert-success">You have been logged out.</div>
     <form th:action="@{/login}" method="post">
         <div class="form-group row">
-            <label for="username" class="col-sm-2 col-form-label">Username</label>
+            <label for="email" class="col-sm-2 col-form-label">Username</label>
             <div class="col-sm-6">
-                <input type="text" id="username" name="username" class="form-control" placeholder="Username" autofocus="autofocus">
+                <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" autofocus="autofocus">
             </div>
         </div>
         <div class="form-group row">
